--- a/app/src/main/res/layout/fragment_register_password.xml
+++ b/app/src/main/res/layout/fragment_register_password.xml
@@ -9,7 +9,15 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <include layout="@layout/tool_bar_blue" />
+        <android.support.v7.widget.Toolbar xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/tool_bar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="@android:color/white"
+            android:fitsSystemWindows="true"
+            android:minHeight="?attr/actionBarSize"
+            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+            app:theme="@style/ToolBarGreen" />
 
         <com.ethan.morephone.widget.MyTextView
             android:id="@+id/text_register_total_title"
@@ -57,5 +65,6 @@
         android:layout_gravity="end|bottom"
         android:layout_margin="@dimen/activity_vertical_margin"
         android:src="@drawable/ic_arrow_right_green"
-        app:backgroundTint="@color/colorMainDark" />
+        app:backgroundTint="@color/colorGray" />
+
 </android.support.design.widget.CoordinatorLayout>
