--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -3,9 +3,18 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@color/colorBackgroundBlue">
+    android:background="@android:color/white">
 
-    <include layout="@layout/tool_bar_blue"/>
+    <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/tool_bar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:fitsSystemWindows="true"
+        android:minHeight="?attr/actionBarSize"
+        android:background="@android:color/white"
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+        app:theme="@style/ToolBarGreen"/>
 
     <com.ethan.morephone.widget.MyTextView
         android:id="@+id/text_forgot_password_title"
@@ -41,7 +50,7 @@
         style="@style/ViewCommon"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
-        app:backgroundTint="@color/colorMainDark"
+        app:backgroundTint="@color/colorGray"
         android:layout_margin="@dimen/activity_vertical_margin"
         android:src="@drawable/ic_arrow_right_green"/>
 
