--- a/app/src/main/res/layout/fragment_register_email.xml
+++ b/app/src/main/res/layout/fragment_register_email.xml
@@ -33,7 +33,7 @@
         style="@style/ViewCommon"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
-        app:backgroundTint="@color/colorMainDark"
+        app:backgroundTint="@color/colorGray"
         android:layout_margin="@dimen/activity_vertical_margin"
         android:src="@drawable/ic_arrow_right_green"/>
 
