--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -50,6 +50,9 @@
             android:id="@+id/text_register_password_show"
             style="@style/TextAuthenticationField"
             android:layout_alignBottom="@+id/text_register_password"
+            android:layout_marginLeft="0dp"
+            android:paddingLeft="@dimen/activity_main_margin"
+            android:paddingRight="@dimen/activity_main_margin"
             android:layout_alignParentRight="true"
             android:background="?android:attr/selectableItemBackground"
             android:text="@string/text_register_password_show"
