--- a/app/src/main/res/layout/item_number.xml
+++ b/app/src/main/res/layout/item_number.xml
@@ -44,6 +44,7 @@
             android:layout_margin="8dp"
             android:layout_toLeftOf="@+id/view_0"
             android:text="4"
+            android:visibility="gone"
             android:textColor="@color/colorPink" />
 
         <ImageView
@@ -76,6 +77,7 @@
             android:layout_margin="8dp"
             android:layout_toLeftOf="@+id/view_2"
             android:text="2"
+            android:visibility="gone"
             android:textColor="@color/colorPink" />
     </RelativeLayout>
 
