--- a/app/src/main/res/layout/dialog_payment_methods.xml
+++ b/app/src/main/res/layout/dialog_payment_methods.xml
@@ -18,7 +18,7 @@
         android:layout_marginTop="36dp"
         android:drawableLeft="@drawable/ic_credit_card"
         android:drawablePadding="@dimen/activity_vertical_margin"
-        android:text="VISA ***** 0011" />
+        android:text="@string/dialog_payment_visa" />
 
     <View
         android:id="@+id/view_divider_1"
@@ -31,7 +31,7 @@
         android:layout_below="@+id/view_divider_1"
         android:drawableLeft="@drawable/ic_credit_card"
         android:drawablePadding="@dimen/activity_vertical_margin"
-        android:text="Paypal" />
+        android:text="@string/dialog_payment_paypal" />
 
     <View
         android:id="@+id/view_divider_2"
@@ -44,7 +44,7 @@
         android:layout_below="@+id/view_divider_2"
         android:drawableLeft="@drawable/ic_credit_card"
         android:drawablePadding="@dimen/activity_vertical_margin"
-        android:text="Add Card" />
+        android:text="@string/dialog_payment_add_card" />
 
     <View
         android:id="@+id/view_divider_3"
