--- a/app/src/main/res/layout/dialpad.xml
+++ b/app/src/main/res/layout/dialpad.xml
@@ -22,9 +22,7 @@
     android:layout_marginTop="@dimen/dialpad_vertical_margin"
     android:layout_weight="@integer/dialpad_layout_weight_dialpad"
     android:layoutDirection="ltr"
-    android:paddingBottom="10dip"
-    android:paddingEnd="5dip"
-    android:paddingStart="5dip">
+    android:paddingBottom="@dimen/table_dialpad_padding_bottom">
 
     <TableRow
         android:layout_height="0px"
