--- a/app/src/main/res/layout/fragment_add_fund.xml
+++ b/app/src/main/res/layout/fragment_add_fund.xml
@@ -6,45 +6,23 @@
     <com.ethan.morephone.widget.MyTextView
         android:id="@+id/text_purchase_phone_number"
         style="@style/TextSettingDisplay"
-        android:layout_marginTop="?attr/actionBarSize"
         android:text="@string/add_fund_title" />
 
-    <com.ethan.morephone.widget.MyTextView
-        android:id="@+id/text_purchase_amount"
-        style="@style/ViewCommon"
-        android:layout_below="@+id/text_purchase_phone_number"
-        android:layout_marginLeft="@dimen/activity_main_margin"
-        android:layout_marginRight="@dimen/activity_main_margin"
-        android:layout_marginTop="@dimen/text_add_fund_purchase_amount_margin_top"
-        android:text="@string/add_fund_amount_to_add"
-        android:textSize="@dimen/text_add_fund_purchase_amount_size" />
-
-    <com.ethan.morephone.widget.MyTextView
-        android:id="@+id/text_purchase_unit"
-        style="@style/ViewCommon"
-        android:layout_below="@+id/text_purchase_amount"
-        android:layout_marginLeft="@dimen/activity_main_margin"
-        android:layout_marginRight="@dimen/activity_main_margin"
-        android:layout_marginTop="@dimen/activity_vertical_margin"
-        android:text="@string/add_fund_purchase_unit"
-        android:textSize="@dimen/text_add_fund_purchase_unit_size" />
-
-    <android.support.v7.widget.AppCompatEditText
-        android:id="@+id/edit_text_amount"
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recycler_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/text_purchase_amount"
-        android:layout_marginRight="@dimen/activity_main_margin"
-        android:layout_marginTop="@dimen/activity_vertical_margin"
-        android:layout_toRightOf="@+id/text_purchase_unit"
-        android:inputType="numberDecimal"
-        android:layout_alignBaseline="@+id/text_purchase_unit"/>
+        android:layout_below="@+id/text_purchase_phone_number"
+        android:layout_marginTop="@dimen/activity_vertical_margin">
+
+    </android.support.v7.widget.RecyclerView>
 
     <android.support.v7.widget.AppCompatButton
         android:id="@+id/button_purchase_add_fund"
         style="@style/ButtonBlue"
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="@dimen/activity_vertical_margin"
+        android:visibility="gone"
         android:text="@string/add_fund_button" />
 
 </RelativeLayout>
