--- a/app/src/main/res/layout/fragment_usage.xml
+++ b/app/src/main/res/layout/fragment_usage.xml
@@ -17,6 +17,20 @@
     <RelativeLayout style="@style/ViewMatch">
 
         <com.ethan.morephone.widget.MyTextView
+            android:id="@+id/text_usage_balance"
+            style="@style/TextSettingDisplay"
+            android:layout_marginTop="?attr/actionBarSize"
+            android:text="@string/usage_balance" />
+
+        <View
+            android:id="@+id/view_divider_1"
+            style="@style/Divider"
+            android:layout_width="@dimen/width_divider_short"
+            android:layout_below="@+id/text_usage_balance"
+            android:layout_marginTop="@dimen/activity_main_margin" />
+
+
+        <com.ethan.morephone.widget.MyTextView
             android:id="@+id/text_usage_message"
             style="@style/TextSettingCategory"
             android:layout_below="@+id/view_divider_1"
@@ -29,38 +43,11 @@
             android:layout_below="@+id/text_usage_message"
             android:layout_marginTop="@dimen/activity_main_margin" />
 
-        <RelativeLayout
-            android:id="@+id/relative_usage_message_total"
-            style="@style/RelativeSetting"
-            android:layout_below="@+id/view_divider_2">
-
-            <com.ethan.morephone.widget.MyTextView
-                android:id="@+id/text_usage_message_total"
-                style="@style/TextUsageTitle"
-                android:text="@string/usage_message_total" />
-
-            <com.ethan.morephone.widget.MyTextView
-                android:id="@+id/text_usage_message_total_set"
-                style="@style/TextUsageValueSpent"
-                android:layout_below="@+id/text_usage_message_total" />
-
-            <com.ethan.morephone.widget.MyTextView
-                android:id="@+id/text_usage_message_total_spent"
-                style="@style/TextUsageValue"
-                android:layout_alignParentLeft="true"
-                android:layout_below="@+id/text_usage_message_total" />
-
-        </RelativeLayout>
-
-        <View
-            android:id="@+id/view_divider_3"
-            style="@style/Divider"
-            android:layout_below="@+id/relative_usage_message_total" />
 
         <RelativeLayout
             android:id="@+id/relative_usage_message_incoming"
             style="@style/RelativeSetting"
-            android:layout_below="@+id/view_divider_3">
+            android:layout_below="@+id/view_divider_2">
 
             <com.ethan.morephone.widget.MyTextView
                 android:id="@+id/text_usage_message_incoming"
@@ -109,37 +96,9 @@
             android:layout_marginTop="@dimen/activity_main_margin" />
 
         <RelativeLayout
-            android:id="@+id/relative_usage_voice_total"
-            style="@style/RelativeSetting"
-            android:layout_below="@+id/view_divider_5">
-
-            <com.ethan.morephone.widget.MyTextView
-                android:id="@+id/text_usage_voice_total"
-                style="@style/TextUsageTitle"
-                android:text="@string/usage_voice_total" />
-
-            <com.ethan.morephone.widget.MyTextView
-                android:id="@+id/text_usage_voice_total_set"
-                style="@style/TextUsageValueSpent"
-                android:layout_below="@+id/text_usage_voice_total" />
-
-            <com.ethan.morephone.widget.MyTextView
-                android:id="@+id/text_usage_voice_total_spent"
-                style="@style/TextUsageValue"
-                android:layout_alignParentLeft="true"
-                android:layout_below="@+id/text_usage_voice_total" />
-
-        </RelativeLayout>
-
-        <View
-            android:id="@+id/view_divider_6"
-            style="@style/Divider"
-            android:layout_below="@+id/relative_usage_voice_total" />
-
-        <RelativeLayout
             android:id="@+id/relative_usage_voice_incoming"
             style="@style/RelativeSetting"
-            android:layout_below="@+id/view_divider_6">
+            android:layout_below="@+id/view_divider_5">
 
             <com.ethan.morephone.widget.MyTextView
                 android:id="@+id/text_usage_voice_incoming"
