--- a/app/src/main/res/layout/item_number.xml
+++ b/app/src/main/res/layout/item_number.xml
@@ -21,14 +21,14 @@
         <com.ethan.morephone.widget.MyTextView
             android:id="@+id/text_number"
             style="@style/TextNumberItem"
-            android:paddingLeft="@dimen/activity_vertical_margin" />
+            android:paddingLeft="@dimen/item_number_space" />
 
         <ImageView
             android:id="@+id/image_delete"
             style="@style/ImageAction"
             android:layout_alignParentRight="true"
-            android:paddingLeft="@dimen/activity_vertical_margin"
-            android:paddingRight="@dimen/activity_vertical_margin"
+            android:paddingLeft="@dimen/item_number_space"
+            android:paddingRight="@dimen/item_number_space"
             android:src="@drawable/ic_trash"
             android:visibility="visible" />
 
@@ -36,7 +36,22 @@
             android:id="@+id/view_0"
             style="@style/ViewDivider"
             android:layout_toLeftOf="@+id/image_delete"
+            android:visibility="invisible" />
+
+        <ImageView
+            android:id="@+id/image_dial"
+            style="@style/ImageAction"
+            android:layout_toLeftOf="@+id/view_0"
+            android:paddingLeft="@dimen/item_number_space"
+            android:paddingRight="@dimen/item_number_space"
+            android:src="@drawable/dialpad"
             android:visibility="visible" />
+
+        <View
+            android:id="@+id/view_10"
+            style="@style/ViewDivider"
+            android:layout_toLeftOf="@+id/image_dial"
+            android:visibility="invisible" />
 
         <com.ethan.morephone.widget.MyTextView
             android:id="@+id/text_item_number_voice_unread"
@@ -50,9 +65,9 @@
         <ImageView
             android:id="@+id/image_voice"
             style="@style/ImageAction"
-            android:layout_toLeftOf="@+id/view_0"
-            android:paddingLeft="@dimen/activity_vertical_margin"
-            android:paddingRight="@dimen/activity_vertical_margin"
+            android:layout_toLeftOf="@+id/view_10"
+            android:paddingLeft="@dimen/item_number_space"
+            android:paddingRight="@dimen/item_number_space"
             android:src="@drawable/ic_voice"
             android:visibility="visible" />
 
@@ -60,14 +75,14 @@
             android:id="@+id/view_2"
             style="@style/ViewDivider"
             android:layout_toLeftOf="@+id/image_voice"
-            android:visibility="visible" />
+            android:visibility="invisible" />
 
         <ImageView
             android:id="@+id/image_message"
             style="@style/ImageAction"
             android:layout_toLeftOf="@+id/view_2"
-            android:paddingLeft="@dimen/activity_vertical_margin"
-            android:paddingRight="@dimen/activity_vertical_margin"
+            android:paddingLeft="@dimen/item_number_space"
+            android:paddingRight="@dimen/item_number_space"
             android:src="@drawable/message"
             android:visibility="visible" />
 
@@ -79,6 +94,8 @@
             android:text="2"
             android:visibility="gone"
             android:textColor="@color/colorPink" />
+
+
     </RelativeLayout>
 
 </android.support.v7.widget.CardView>
