--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -11,7 +11,7 @@
         <item
             android:id="@+id/nav_card"
             android:icon="@drawable/ic_credit_card_black_24dp"
-            android:title="@string/menu_add_fund" />
+            android:title="@string/menu_credit" />
 
         <item
             android:id="@+id/nav_setting"
