--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -13,10 +13,10 @@
             android:icon="@drawable/ic_credit_card_black_24dp"
             android:title="@string/menu_credit" />
 
-        <item
-            android:id="@+id/nav_setting"
-            android:icon="@drawable/ic_settings_black_24dp"
-            android:title="@string/menu_setting" />
+        <!--<item-->
+            <!--android:id="@+id/nav_setting"-->
+            <!--android:icon="@drawable/ic_settings_black_24dp"-->
+            <!--android:title="@string/menu_setting" />-->
 
         <item
             android:id="@+id/nav_usage"
